# lumos_sdk

./: .gitignore  CMakeLists.txt  README.md  example_joint_cmds.cpp  example_robot_cmd.cpp  lumos_lcm_control.hpp  sdk_base_define.hpp  sdk_lcmt_joint_cmd.hpp  sdk_lcmt_joint_cmds.hpp  sdk_robot_manager.cpp  sdk_robot_manager.hpp
example/: recv_game_handler_cmd.cpp  recv_imu_data.cpp  recv_joint_datasets.cpp  send_joint_cmds.cpp  send_joint_cmds2.cpp  send_robot_cmd.cpp
lcm_typedef/: microstrain_lcmt.hpp  sdk_lcmt_joint_data.hpp  sdk_lcmt_joint_datasets.hpp  sdk_lcmt_type.hpp
